# mvstar

./: README.md  pyproject.toml
src/mvstar/: app.py  cplist.py  dynamic.py  mvinfo.py
tests/: test_call.py
